--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
 
 android {
     compileSdk 30
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.fenscode.stackusers"
@@ -44,7 +45,7 @@ dependencies {
     //LifeCycle
     implementation "androidx.lifecycle:lifecycle-common:$lifecycle_common"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_runtime_ktx"
-    implementation "android.arch.lifecycle:extensions:$lifecycle_extensions"
+//    implementation "android.arch.lifecycle:extensions:$lifecycle_extensions"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_livedata_ktx"
 
     //Retrofit
