--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,37 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
+    ext{
+        kotlin_ver = '1.5.30'
+        gradle_ver = '7.0.2'
+        core_ktx = '1.6.0'
+        appcompat = '1.3.1'
+        material = '1.4.0'
+        constraintlayout = '2.1.0'
+        recyclerview = '1.2.1'
+        glide = '4.10.0'
+        lifecycle_common = '2.3.1'
+        lifecycle_runtime_ktx = '2.3.1'
+        lifecycle_extensions = '2.2.0'
+        lifecycle_livedata_ktx = '2.3.1'
+        retrofit = '2.9.0'
+        gson = '2.8.6'
+        gson_converter = '2.5.0'
+        logging_interceptor = '3.12.0'
+        kotlinx_coroutines = '1.5.1'
+
+        junit = '4.13.2'
+        ext_junit = '1.1.3'
+        espresso_core = '3.4.0'
+    }
+
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.30"
+        classpath "com.android.tools.build:gradle:$gradle_ver"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_ver"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
