--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,10 @@
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
 }
+
+apply plugin: 'kotlinx-serialization'
 
 android {
     compileSdk 30
@@ -13,6 +16,7 @@ android {
         targetSdk 30
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -45,6 +49,8 @@ dependencies {
 
     implementation "androidx.recyclerview:recyclerview:$recyclerview"
     implementation "com.github.bumptech.glide:glide:$glide"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.2.2"
 
     //LifeCycle
     implementation "androidx.lifecycle:lifecycle-common:$lifecycle_common"
