--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 buildscript {
 
     ext{
-        kotlin_ver = '1.5.30'
+        kotlin_ver = '1.5.31'
         gradle_ver = '7.0.2'
         core_ktx = '1.6.0'
         appcompat = '1.3.1'
@@ -32,7 +32,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradle_ver"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_ver"
-
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_ver"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
